remake container + typo

--- a/src/css/project/_feature.sass
+++ b/src/css/project/_feature.sass
@@ -1,5 +1,5 @@
 .feature
-  @media(min-width: $sm) and (max-width: $lg - 1)
+  @media(min-width: $sm) and (max-width: $tablet - 1)
     display: flex
 
   &__image
@@ -35,11 +35,11 @@
       width: auto
 
   &__text-block
-    @media(min-width: $sm) and (max-width: $lg - 1)
+    @media(min-width: $sm) and (max-width: $tablet - 1)
       padding-left: 40px
 
   h3
-    @media(min-width: $sm) and (max-width: $lg - 1)
+    @media(min-width: $sm) and (max-width: $tablet - 1)
       margin-top: 0
 
 .feature_2
