--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -24,7 +24,7 @@ body
 
     .header__logo
       svg
-        @media(min-width: 1350px)
+        @media(min-width: $tablet)
           fill: #fff
 
 .page-content
@@ -34,18 +34,15 @@ body
   padding-bottom: 110px
 
   @media (min-width: $sm)
-    padding-top: 195px
-
-  //@media (min-width: $lg)
-    padding-top: 265px
+    padding-top: 140px
 
   @media (min-width: $xl)
-    padding-top: 295px
+    padding-top: 180px
 
 .container
   margin-left: auto
   margin-right: auto
-  max-width: 1600px
+  max-width: 1280px
   padding-left: 30px
   padding-right: 30px
 
@@ -53,7 +50,8 @@ body
     padding-left: 40px
     padding-right: 40px
 
-  @media (min-width: $lg)
+  @media (min-width: $xl)
+    max-width: 1600px
     padding-left: 80px
     padding-right: 80px
 
@@ -147,7 +145,7 @@ body
       height: 20px
 
 .cols-3
-  @media(min-width: $lg)
+  @media(min-width: $tablet)
     display: flex
     flex-wrap: wrap
     margin-left: -20px
@@ -162,7 +160,7 @@ body
   .col
     margin-bottom: 40px
 
-    @media(min-width: $lg)
+    @media(min-width: $tablet)
       margin-bottom: 50px
       padding-left: 20px
       padding-right: 20px
@@ -271,11 +269,11 @@ h2,.h2
     letter-spacing: 0
     margin-bottom: 10px
 
-    @media(min-width: $sm)
+    @media(min-width: $lg)
       font-size: 44px
       margin-bottom: 15px
 
-    @media(min-width: $lg)
+    @media(min-width: $xl)
       font-size: 64px
 
 .page-banner + .about-sign
