--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -5,7 +5,7 @@ body
   line-height: 1.6
   letter-spacing: 0.48px
 
-  @media(min-width: $sm)
+  @media(min-width: $xl)
     font-size: 20px
     line-height: 1.7
     letter-spacing: 0.6px
@@ -37,10 +37,14 @@ h1,.h1
   margin-bottom: 30px
 
   @media(min-width: $sm)
-    font-size: 62px
-    margin-bottom: 40px
+    font-size: 50px
+    margin-bottom: 32px
 
   @media(min-width: $lg)
+    font-size: 62px
+    margin-bottom: 48px
+
+  @media(min-width: $xl)
     font-size: 70px
     line-height: 1.37
     margin-bottom: 60px
@@ -52,10 +56,13 @@ h2,.h2
   margin-top: 0
 
   @media(min-width: $sm)
-    font-size: 52px
-    margin-bottom: 40px
+    font-size: 42px
+    margin-bottom: 32px
 
   @media(min-width: $lg)
+    font-size: 52px
+
+  @media(min-width: $xl)
     font-size: 64px
 
   &:not(:first-child)
@@ -68,6 +75,9 @@ h3,.h3
   margin-bottom: 20px
 
   @media(min-width: $sm)
+    font-size: 24px
+
+  @media(min-width: $lg)
     font-size: 30px
 
   &:not(:first-child)
@@ -222,12 +232,15 @@ img
 .nav-link
   align-items: center
   display: inline-flex
-  font-size: 20px
+  font-size: 16px
   font-weight: 700
   vertical-align: top
   text-decoration: none
 
-  @media(min-width: $sm)
+  @media(min-width: $lg)
+    font-size: 20px
+
+  @media(min-width: $xl)
     font-size: 24px
 
   &:hover,
@@ -253,7 +266,7 @@ img
     transition: fill 0.3s
     width: 30px
 
-    @media(min-width: $sm)
+    @media(min-width: $xl)
       height: 25px
       width: 38px
 
@@ -263,7 +276,7 @@ img
     position: relative
     width: 30px
 
-    @media(min-width: $sm)
+    @media(min-width: $xl)
       margin-top: 5px
       height: 25px
       width: 38px
@@ -279,7 +292,7 @@ img
       transition: width 0.3s
       width: 30px
 
-      @media(min-width: $sm)
+      @media(min-width: $xl)
         height: 25px
         width: 38px
 
@@ -312,7 +325,7 @@ img
       width: 0
       z-index: -1
 
-      @media(min-width: $sm)
+      @media(min-width: $xl)
         height: 15px
 
   &:active
