--- a/src/css/project/_cases.sass
+++ b/src/css/project/_cases.sass
@@ -90,6 +90,9 @@ h2,.h2
     margin-bottom: 0
 
     @media(min-width: $sm)
+      font-size: 24px
+
+    @media(min-width: $xl)
       font-size: 30px
 
     &:not(:first-child)
