--- a/src/css/project/_footer.sass
+++ b/src/css/project/_footer.sass
@@ -26,7 +26,7 @@
   &__inner
     margin-left: auto
     margin-right: auto
-    max-width: 1600px
+    max-width: 1280px
     padding-left: 30px
     padding-right: 30px
 
@@ -37,7 +37,8 @@
       padding-right: 40px
       text-align: left
 
-    @media (min-width: $lg)
+    @media (min-width: $xl)
+      max-width: 1600px
       padding-left: 80px
       padding-right: 80px
 
