--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -30,6 +30,7 @@
       padding-right: 40px
 
     @media (min-width: $lg)
+      min-height: 100px
       padding-left: 60px
       padding-right: 60px
 
@@ -206,11 +207,11 @@
   top: 0
   z-index: 9
 
-  @media(min-width: 1350px)
+  @media(min-width: $tablet)
     padding-left: 42.55208%
 
   &::before
-    @media(min-width: 1350px)
+    @media(min-width: $tablet)
       background-image: url('../images/backgrounds/menu.jpg')
       background-color: $border-color
       background-repeat: no-repeat
@@ -231,20 +232,18 @@
     overflow-y: auto
     padding-left: 30px
     padding-right: 30px
-    padding-top: 110px
+    padding-top: 30px
     padding-bottom: 30px
 
     @media(min-width: $sm)
-      padding-top: 145px
       padding-left: 40px
       padding-right: 40px
-      padding-bottom: 60px
+
+    @media(min-width: $tablet)
+      padding-top: 60px
 
     @media(min-width: 1350px)
       padding-left: 140px
-
-    @media(min-width: $lg)
-      padding-bottom: 80px
 
   &__nav
     margin-top: auto
