--- a/src/css/project/_hero.sass
+++ b/src/css/project/_hero.sass
@@ -8,14 +8,11 @@
     @media(min-width: $xl)
       margin-bottom: 240px
 
-  @media(min-width: $sm)
-    margin-top: -60px
-
   @media(min-width: $tablet)
     position: relative
 
   &::after
-    @media(min-width: 1200px)
+    @media(min-width: $md)
       bottom: 0
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 52'%3E%3Cg%3E%3Crect fill='%23D5E0E9' x='7.5' y='0.4' class='st0' width='2' height='50'/%3E%3Cpolygon fill='%23D5E0E9' points='8.5,51.6 0.5,43.6 1.9,42.2 8.5,48.8 15.1,42.2 16.5,43.6'/%3E%3C/g%3E%3C/svg%3E%0A")
       background-position: 0 0
@@ -44,17 +41,21 @@
       flex-direction: column
       flex-grow: 1
       justify-content: center
-      padding-right: 36%
+      padding-right: 35%
 
   h1
     font-size: 30px
 
     @media(min-width: $sm)
-      font-size: 68px
-      margin-bottom: 60px
-      max-width: 740px
+      font-size: 54px
+      margin-bottom: 48px
+      max-width: 600px
 
     @media(min-width: $lg)
+      font-size: 68px
+      max-width: 740px
+
+    @media(min-width: $xl)
       font-size: 75px
       margin-bottom: 60px
 
@@ -84,14 +85,17 @@
     position: relative
     transition: color 0.3s
 
-    @media(min-width: $sm)
-      font-size: 24px
+    @media(min-width: $lg)
+      font-size: 20px
       margin-bottom: 15px
+
+    @media(min-width: $xl)
+      font-size: 24px
 
     &:not(:last-child)
       margin-right: 15px
 
-      @media(min-width: $sm)
+      @media(min-width: $lg)
         margin-right: 30px
 
     &:hover,
@@ -116,11 +120,10 @@
       width: 0
       z-index: -1
 
-      @media(min-width: $sm)
+      @media(min-width: $lg)
         height: 15px
 
   &__image
-    margin-bottom: 40px
     position: relative
 
     @media(min-width: $tablet)
