--- a/src/css/project/_infinite-scroller.sass
+++ b/src/css/project/_infinite-scroller.sass
@@ -11,12 +11,12 @@
     margin-top: 50px
 
   @media(min-width: $lg)
-    margin-left: -80px
-    margin-right: -80px
+    //margin-left: -80px
+    //margin-right: -80px
     margin-bottom: 60px
     margin-top: 60px
 
-  @media(min-width: 1600px)
+  @media(min-width: 1280px)
     left: 50%
     margin-left: 0
     margin-right: 0
