--- a/src/css/project/_tags.sass
+++ b/src/css/project/_tags.sass
@@ -8,21 +8,21 @@
   margin: 0 0 40px
   padding: 0
 
-  @media(min-width: $sm)
-    font-size: 24px
-    margin-bottom: 65px
-
   @media(min-width: $lg)
+    font-size: 20px
     margin-bottom: 105px
     max-width: 80%
 
+  @media(min-width: $xl)
+    font-size: 24px
+    margin-bottom: 65px
+
   &__item
-    margin-bottom: 10px
+    margin-bottom: 15px
     margin-right: 15px
 
-    @media(min-width: $sm)
+    @media(min-width: $lg)
       margin-right: 30px
-      margin-bottom: 15px
 
   &__link
     color: $border-color
