remake hero + remake article picture

--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -39,6 +39,10 @@ body
   @media (min-width: $xl)
     padding-top: 180px
 
+.hero-page
+  .page-content
+    padding-top: 0
+
 .container
   margin-left: auto
   margin-right: auto
