--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -1,3 +1,10 @@
+.hero-page
+  .header
+    background-color: transparent
+
+    &.scrolled
+      background-color: #fff
+
 .header
   background-color: #fff
   box-shadow: none
@@ -5,7 +12,7 @@
   position: fixed
   right: 0
   top: 0
-  transition: box-shadow 0.3s, transform 0.3s
+  transition: box-shadow 0.3s, transform 0.3s, background-color 0.3s
   transform: translateY(0)
   z-index: 10
 
