--- a/src/css/project/_articles.sass
+++ b/src/css/project/_articles.sass
@@ -74,15 +74,33 @@ h2,.h2
       width: 100%
 
     picture
-      margin-bottom: 20px
       overflow: hidden
-
-      @media(min-width: $sm)
-        margin-bottom: 30px
 
     img
       transform: scale(1)
       transition: transform 0.3s
+
+  &__picture-block
+    display: block
+    margin-bottom: 20px
+    position: relative
+
+    @media(min-width: $sm)
+      margin-bottom: 30px
+
+  &__image-togglers
+    display: flex
+    height: 100%
+    left: 0
+    opacity: 0
+    position: absolute
+    top: 0
+    width: 100%
+    z-index: 1
+
+  &__image-toggler
+    flex-grow: 1
+    position: relative
 
   &__title
     font-size: 20px
