--- a/src/css/project/_hero.sass
+++ b/src/css/project/_hero.sass
@@ -1,4 +1,13 @@
 .hero
+  position: relative
+  padding-top: 110px
+
+  @media (min-width: $sm)
+    padding-top: 140px
+
+  @media (min-width: $xl)
+    padding-top: 180px
+
   &:not(:last-child)
     margin-bottom: 65px
 
@@ -8,25 +17,14 @@
     @media(min-width: $xl)
       margin-bottom: 240px
 
-  @media(min-width: $tablet)
+  .container
     position: relative
-
-  &::after
-    @media(min-width: $md)
-      bottom: 0
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 52'%3E%3Cg%3E%3Crect fill='%23D5E0E9' x='7.5' y='0.4' class='st0' width='2' height='50'/%3E%3Cpolygon fill='%23D5E0E9' points='8.5,51.6 0.5,43.6 1.9,42.2 8.5,48.8 15.1,42.2 16.5,43.6'/%3E%3C/g%3E%3C/svg%3E%0A")
-      background-position: 0 0
-      background-size: 15px 50px
-      content: ''
-      height: 50px
-      left: 0
-      position: absolute
-      top: auto
-      width: 15px
+    z-index: 1
 
   &__inner
     @media(min-width: $tablet)
       display: flex
+      position: relative
 
     &::after
       @media(min-width: $tablet)
@@ -34,6 +32,19 @@
         height: 0
         padding-bottom: 55.388%
         content: ''
+
+    //&::before
+      @media(min-width: $md)
+        bottom: 0
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 52'%3E%3Cg%3E%3Crect fill='%23D5E0E9' x='7.5' y='0.4' class='st0' width='2' height='50'/%3E%3Cpolygon fill='%23D5E0E9' points='8.5,51.6 0.5,43.6 1.9,42.2 8.5,48.8 15.1,42.2 16.5,43.6'/%3E%3C/g%3E%3C/svg%3E%0A")
+        background-position: 0 0
+        background-size: 15px 50px
+        content: ''
+        height: 50px
+        left: 0
+        position: absolute
+        top: auto
+        width: 15px
 
   &__content
     @media(min-width: $tablet)
@@ -74,7 +85,7 @@
   &__button
     background-color: transparent
     border: none
-    color: $border-color
+    color: #000
     cursor: pointer
     font-size: 18px
     font-weight: 700
@@ -195,6 +206,20 @@
         height: 40px
         margin-left: 5px
         margin-right: 5px
+
+  &__back
+    bottom: 0
+    left: 0
+    opacity: 0.1
+    position: absolute
+    right: 0
+    top: 0
+    z-index: -1
+
+    img
+      height: 100%
+      object-fit: cover
+      width: 100%
 
 #rotate
   transform-origin: 50% 50% 0
