--- a/src/css/project/_cases.sass
+++ b/src/css/project/_cases.sass
@@ -8,6 +8,9 @@
     @media(min-width: $lg)
       margin-bottom: 120px
 
+  &:last-child
+    margin-bottom: -110px
+
 .cases-list
   display: flex
   margin-left: -30px
