--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -24,6 +24,8 @@
 
 @import "vendor/animate.scss"
 
+@import "vendor/twentytwenty.scss"
+
 
 
 @import "project/_header.sass"
@@ -76,3 +78,5 @@
 @import "project/_contacts.sass"
 
 @import "project/_page-404.sass"
+
+@import "project/_flip-flap.sass"
