--- a/src/css/project/_benefit.sass
+++ b/src/css/project/_benefit.sass
@@ -8,16 +8,20 @@
     width: 290px
 
   &__title
-    background-image: url('../images/icons/arrow_right.svg')
-    background-repeat: no-repeat
-    background-position: 100% 7px
-    background-size: 24px 12px
     font-size: 18px
-    padding-right: 30px
 
     @media(min-width: $sm)
       margin-bottom: 30px
 
     @media(min-width: $lg)
-      background-position: 100% 9px
       font-size: 20px
+
+    &--arrow
+      background-image: url('../images/icons/arrow_right.svg')
+      background-repeat: no-repeat
+      background-position: 100% 7px
+      background-size: 24px 12px
+      padding-right: 30px
+
+      @media(min-width: $lg)
+        background-position: 100% 9px
