--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -59,6 +59,15 @@ body
     padding-left: 80px
     padding-right: 80px
 
+.vertical-indent
+  margin-bottom: 40px
+
+  @media(min-width: $sm)
+    margin-bottom: 60px
+
+  @media(min-width: $lg)
+    margin-bottom: 80px
+
 .text-block-730
   max-width: 730px
 
