--- a/src/template/header.html
+++ b/src/template/header.html
@@ -31,14 +31,14 @@
                     <li class="main-menu__list-item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="header__socials">
-                <li class="header__socials-item"><a href="#" target="_blank">Instagram</a></li>
-                <li class="header__socials-item"><a href="#" target="_blank">Vkontakte</a></li>
-                <li class="header__socials-item"><a href="#" target="_blank">Facebook</a></li>
+            <ul class="socials">
+                <li class="socials__item"><a href="#" target="_blank">Instagram</a></li>
+                <li class="socials__item"><a href="#" target="_blank">Vkontakte</a></li>
+                <li class="socials__item"><a href="#" target="_blank">Facebook</a></li>
             </ul>
-            <p class="header__mail-block"><a class="email-link" href="mailto:mail@vsignal.ru">mail@vsignal.ru</a></p>
-            <p class="header__phone-block"><a href="tel:+78125018207">8 (812) 501-82-07</a></p>
-            <p class="header__address">г.&nbsp;Санкт-Петербург, Гражданский&nbsp;пр.&nbsp;114</p>
+            <p class="mail-block"><a class="email-link" href="mailto:mail@vsignal.ru">mail@vsignal.ru</a></p>
+            <p class="phone-block"><a href="tel:+78125018207">8 (812) 501-82-07</a></p>
+            <p class="address">г.&nbsp;Санкт-Петербург, Гражданский&nbsp;пр.&nbsp;114</p>
         </div>
     </div>
 </header>
