--- a/src/css/project/_footer.sass
+++ b/src/css/project/_footer.sass
@@ -58,22 +58,22 @@
     flex-grow: 1
     width: 100%
 
-  &__mail-block,
-  &__phone-block
+  .mail-block,
+  .phone-block
     font-size: 20px
     line-height: 1.7
     letter-spacing: 0.6px
 
-  &__mail-block
+  .mail-block
     margin-bottom: 25px
 
     @media(min-width: $sm)
       margin-bottom: 15px
 
-  &__phone-block
+  .phone-block
     margin-bottom: 5px
 
-  &__address
+  .address
     font-size: 16px
     letter-spacing: 0.48px
     line-height: 1.6
@@ -83,7 +83,7 @@
       display: flex
       flex-direction: column
 
-  &__socials
+  .socials
     font-size: 20px
     line-height: 1.7
     list-style: none
@@ -97,12 +97,13 @@
       flex-wrap: wrap
       margin-bottom: auto
 
-  &__socials-item
-    &:not(:last-child)
-      margin-bottom: 10px
+    &__item
+      &:not(:last-child)
+        margin-bottom: 10px
 
-      @media(min-width: $sm)
-        margin-right: 35px
+        @media(min-width: $sm)
+          margin-right: 35px
+          margin-bottom: 0
 
   &__links
     font-size: 14px
